[GTK] Default initialize GTK-specific print info in WebKit::PrintInfo https://bugs.webkit.org/show_bug.cgi?id=196542

Reviewed by Adrian Perez de Castro.

Source/WebKit:

printInfoFromWKPrintInfo() will not initialize GTK-specific bits,
leading to problems down the road with IPC encoders, so add default values.

* Shared/PrintInfo.h:

LayoutTests:

* LayoutTests/platform/gtk/TestExpectations: Remove now passing tests
* platform/gtk/editing/execCommand/print-expected.png: Update expectations
* platform/gtk/editing/execCommand/print-expected.txt:

Canonical link: https://commits.webkit.org/249674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292904 268f45cc-cd09-0410-ab3c-d52691b4dbfc